--- a/src/index.css
+++ b/src/index.css
@@ -158,7 +158,7 @@ body {
   sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: rgb(81, 81, 81);
+  background-color: #800020;
   padding: 2vmin;
   height: 100vh;
 }
